--- a/app/src/main/res/layout/fragment_reception.xml
+++ b/app/src/main/res/layout/fragment_reception.xml
@@ -68,5 +68,20 @@
             android:textColor="@color/dark_grey"
             android:textSize="24sp"
             app:cornerRadius="15sp" />
+
+        <Button
+            android:id="@+id/add_doctor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="8dp"
+            android:backgroundTint="@color/grey"
+            android:backgroundTintMode="add"
+            android:text="Добавить доктора (бета)"
+            android:textColor="@color/dark_grey"
+            android:textSize="24sp"
+            android:visibility="invisible"
+            app:cornerRadius="15sp" />
     </LinearLayout>
 </FrameLayout>
